--- a/src/pug/ucet-prihlaseni.pug
+++ b/src/pug/ucet-prihlaseni.pug
@@ -55,18 +55,18 @@ html(lang=lang)
                                     p.o-form__text Jako registrovaný uživatel získává slevu ve výši 1% na veškeré zboží, které není aktuálně ve slevě. 
 
                                     .o-form__group.m-formGroup
-                                        input.m-formGroup__input(type="email" name="login_form_email" id="login_form_email" autocomplete="email" required placeholder=" ")
-                                        label.m-formGroup__label(for="login_form_email") Uživatelské jméno
+                                        input.m-formGroup__input(type="email" name="login_form_email2" id="login_form_email2" autocomplete="email" required placeholder=" ")
+                                        label.m-formGroup__label(for="login_form_email2") Uživatelské jméno
                                         span.m-formGroup__error Neplatné uživatelské jméno
                                         span.m-formGroup__success
 
                                     .o-form__group.m-formGroup
-                                        input.m-formGroup__input(type="password" name="login_form_password" id="login_form_password" autocomplete="password" required placeholder=" ")
-                                        label.m-formGroup__label(for="login_form_password") Heslo
+                                        input.m-formGroup__input(type="password" name="login_form_password2" id="login_form_password2" autocomplete="password" required placeholder=" ")
+                                        label.m-formGroup__label(for="login_form_password2") Heslo
                                         span.m-formGroup__error Neplatné heslo
                                         span.m-formGroup__success
 
-                                    button.btn.-secondary.-fullWidth(type="submit" id="login_form_submit") Přihlásit se
+                                    button.btn.-secondary.-fullWidth(type="submit" id="login_form_submit2") Přihlásit se
 
                                     a.o-form__link(href="#") Obnovit zapomenuté heslo
 
