--- a/src/scss/partials/03_organism/_o-navProducts.scss
+++ b/src/scss/partials/03_organism/_o-navProducts.scss
@@ -78,7 +78,7 @@
     width: 100%;
     position: absolute;
     left: 0;
-
+    z-index: 9;
 }
 .o-navProducts__subCategoryWrap{
     padding: 0px;
