--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -345,6 +345,11 @@ html(lang=lang)
                                     span.m-formGroup__error Neplatné heslo
                                     span.m-formGroup__success
 
+                                .o-form__group.m-formGroup.-checkbox
+                                    input.m-formGroup__input(type="checkbox" name="login_form_legal" id="login_form_legal")
+                                    span.m-formGroup__checkbox.a-checkbox
+                                    label.m-formGroup__label.-small(for="login_form_legal") Přihlašuji se jako velkoobchod    
+
                                 button.btn.-secondary.-fullWidth(type="submit" id="login_form_submit_cart") Přihlásit se
 
                                 a.o-form__link(href="#") Obnovit zapomenuté heslo
