--- a/src/scss/partials/03_organism/_o-navProducts.scss
+++ b/src/scss/partials/03_organism/_o-navProducts.scss
@@ -92,7 +92,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     border-right: 1px solid $border-grey;
     border-bottom: 1px solid $border-grey;
@@ -110,9 +110,10 @@
 }
 .o-navProducts__subCategoryText{
     width: 100%;
-    height: 100%;
+    height: auto;
     padding-top: 20px;
     text-align: center;
+    padding-bottom: 10px;
     @include f-18-primary-medium;
     text-transform: uppercase;
 }
