--- a/src/scss/partials/03_organism/_o-subCategories.scss
+++ b/src/scss/partials/03_organism/_o-subCategories.scss
@@ -19,7 +19,8 @@
     padding: 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
+    height: 100%;
     align-items: center;
 }
 .o-subCategories__title{
