--- a/src/pug/ucet-detail.pug
+++ b/src/pug/ucet-detail.pug
@@ -100,7 +100,7 @@ html(lang=lang)
 
                         .col-12.col-md-12
                             .o-form__group.m-formGroup
-                                select.m-formGroup__input(name="register_form_country" id="register_form_country" required checked)
+                                select.m-formGroup__input(name="register_form_country" id="register_form_country" required)
                                     option(value="cz") Česká republika
                                     option(value="sk") Slovensko
 
@@ -165,7 +165,7 @@ html(lang=lang)
 
                                 .col-12.col-md-12
                                     .o-form__group.m-formGroup
-                                        select.m-formGroup__input(name="register_form_billing_postal_country" id="register_form_billing_postal_country" required checked)
+                                        select.m-formGroup__input(name="register_form_billing_postal_country" id="register_form_billing_postal_country" required)
                                             option(value="cz") Česká republika
                                             option(value="sk") Slovensko
 
@@ -218,7 +218,7 @@ html(lang=lang)
 
                                 .col-12.col-md-12
                                     .o-form__group.m-formGroup
-                                        select.m-formGroup__input(name="register_form_shipping_postal_country" id="register_form_shipping_postal_country" required checked)
+                                        select.m-formGroup__input(name="register_form_shipping_postal_country" id="register_form_shipping_postal_country" required)
                                             option(value="cz") Česká republika
                                             option(value="sk") Slovensko
 
