--- a/src/pug/ucet-registrace.pug
+++ b/src/pug/ucet-registrace.pug
@@ -95,7 +95,7 @@ html(lang=lang)
 
                         .col-12.col-md-12
                             .o-form__group.m-formGroup
-                                select.m-formGroup__input(name="register_form_country" id="register_form_country" required checked)
+                                select.m-formGroup__input(name="register_form_country" id="register_form_country" required)
                                     option(value="cz") Česká republika
                                     option(value="sk") Slovensko
 
@@ -160,7 +160,7 @@ html(lang=lang)
         
                                 .col-12.col-md-12
                                     .o-form__group.m-formGroup
-                                        select.m-formGroup__input(name="register_form_billing_postal_country" id="register_form_billing_postal_country" required checked)
+                                        select.m-formGroup__input(name="register_form_billing_postal_country" id="register_form_billing_postal_country" required)
                                             option(value="cz") Česká republika
                                             option(value="sk") Slovensko
 
