--- a/src/pug/kosik-2.pug
+++ b/src/pug/kosik-2.pug
@@ -33,6 +33,11 @@ html(lang=lang)
 
         main
             .container
+            
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v Kč
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v %
+                .m-alert.-info Množstevní sleva MO v Kč
+                .m-alert.-info Množstevní sleva VO v Kč
 
                 .m-cartOverview
                     .m-cartOverview__product(data-price="10000")
