--- a/src/pug/kosik-4.pug
+++ b/src/pug/kosik-4.pug
@@ -36,6 +36,11 @@ html(lang=lang)
 
                 .m-alert.-danger Všechny údaje pěčlivě zkontrolujte a následně objednávku potvrďte tlačítkem "Odeslat objednávku"
 
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v Kč
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v %
+                .m-alert.-info Množstevní sleva MO v Kč
+                .m-alert.-info Množstevní sleva VO v Kč
+                
                 form(method="post" action="" name="cart_form")
                     .m-cartItemTop
                         .m-cartItemTop__item.-img Produkt
