--- a/src/pug/kosik-3.pug
+++ b/src/pug/kosik-3.pug
@@ -33,7 +33,10 @@ html(lang=lang)
 
         main
             .container
-
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v Kč
+                .m-alert.-info Slevový kód: ".$row_sk->kod." částka v %
+                .m-alert.-info Množstevní sleva MO v Kč
+                .m-alert.-info Množstevní sleva VO v Kč
                 .m-cartOverview
                     .m-cartOverview__product
                         .m-cartOverview__productSingle
