--- a/src/pug/partials/_filter.pug
+++ b/src/pug/partials/_filter.pug
@@ -105,11 +105,16 @@ form.o-filter(id="js-filter" method="post" name="filter-form" action="")
                                 .o-filter__formGroup.m-formGroup.-radiobutton.-noMargin
                                     input.m-formGroup__input(type="radio" name="filter-sort" id="filter-sort-2" required)
                                     span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="filter-sort-2") Podle názvu A - Z
+                                    label.m-formGroup__label(for="filter-sort-2") Od nejdražšího
                             .o-filter__item
                                 .o-filter__formGroup.m-formGroup.-radiobutton.-noMargin
                                     input.m-formGroup__input(type="radio" name="filter-sort" id="filter-sort-3" required)
                                     span.m-formGroup__radiobutton.a-radiobutton
-                                    label.m-formGroup__label(for="filter-sort-3") Podle data zveřejnění
+                                    label.m-formGroup__label(for="filter-sort-3") Podle názvu A - Z
+                            .o-filter__item
+                                .o-filter__formGroup.m-formGroup.-radiobutton.-noMargin
+                                    input.m-formGroup__input(type="radio" name="filter-sort" id="filter-sort-4" required)
+                                    span.m-formGroup__radiobutton.a-radiobutton
+                                    label.m-formGroup__label(for="filter-sort-4") Podle data zveřejnění
 
     .o-filter__responsiveBottom(id="js-filterTogglerResponsive2") Potvrdit filtr
