--- a/src/scss/partials/02_molecule/_m-navCart.scss
+++ b/src/scss/partials/02_molecule/_m-navCart.scss
@@ -1,5 +1,5 @@
 .m-navCart{
-    background: $bg-dark;
+    background: transparent;
     height: 100%;
     display: flex;
     flex-direction: row;
