--- a/src/scss/partials/03_organism/_o-navProducts.scss
+++ b/src/scss/partials/03_organism/_o-navProducts.scss
@@ -79,6 +79,7 @@
     position: absolute;
     left: 0;
     z-index: 9;
+    box-shadow: $box-shadow-primary;
 }
 .o-navProducts__subCategoryWrap{
     padding: 0px;
@@ -88,7 +89,7 @@
 }
 .o-navProducts__subCategory{
     padding: 20px 0;
-    width: 20%;
+    width: 16.666%;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -106,7 +107,7 @@
     }
 }
 .o-navProducts__subCategoryImg{
-    height: 60px;
+    height: 40px;
 }
 .o-navProducts__subCategoryText{
     width: 100%;
@@ -114,11 +115,14 @@
     padding-top: 20px;
     text-align: center;
     padding-bottom: 10px;
-    @include f-18-primary-medium;
+    @include f-16-primary-medium;
     text-transform: uppercase;
 }
 .o-navProducts__subCategorySubText{
     @include f-14-primary-regular;
+    font-size: 13px;
+    text-align: center;
+    margin-bottom: 1rem;
 }
 
 @media screen and (max-width:1400px){
