--- a/src/pug/kosik-2.pug
+++ b/src/pug/kosik-2.pug
@@ -116,6 +116,8 @@ html(lang=lang)
                         label.m-formGroup__label(for="doprava6") DOBÍRKA - ČESKÁ POŠTA - BALÍK DO RUKY           
                         .m-formGroup__cartPrice 130 Kč
                 
+                    .m-alert.-success Vaše balíková zásilka bude připravena k vyzvednutí na poště: #[br] Ostrava 34, náměstí Družby 1215/2, Ostrava, 70034
+
                     .m-cartButtons
                         a.btn.-dark(href="#") Krok zpět
                         button.btn.-secondary(type="submit" id="delivery-form-submit") Osobní údaje #[span.a-btnIcon #[span.a-icon.-cheveron.-white]]
