--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -223,6 +223,11 @@ html(lang=lang)
                                 p.o-store__text Náměstí Svobody č.3
                                 a.o-store__link(href="#") Více informací #[span.a-icon.-cheveron.-green]
 
+                    .col-12.col-md-12
+                        a.o-store__stock(href="#")
+                            .o-store__stockText Nahlédněte k nám do skladu
+
+
 
         include partials/_footer.pug
 
