--- a/src/scss/partials/03_organism/_o-store.scss
+++ b/src/scss/partials/03_organism/_o-store.scss
@@ -38,7 +38,7 @@
 .o-store__stock{
     height: 180px;
     background: $bg-dark;
-    background-image: url("../img/stock.jpg");
+    background-image: url("../img/bg-stock.jpg");
     background-position: center center;
     width: 100%;
     display: flex;
