--- a/src/pug/partials/_modal-add-to-cart.pug
+++ b/src/pug/partials/_modal-add-to-cart.pug
@@ -31,6 +31,8 @@
                                 .m-cartItemSingle__sum-wrap.text-right
                                     p.m-cartItemSingle__sum #[span 8 489] Kč
 
+                .m-alert.-danger Vámi objednaný počet je vyšší než aktuální stav skladových zásob, dodání 2-10 dnů
+
             .modal-footer.o-modal__footer
                 button.btn.-dark(type="button" data-dismiss="modal") Zpět do obchodu
                 a.btn.-secondary(href="#") Dokončit objednávku #[span.a-btnIcon #[span.a-icon.-cheveron.-white]] 
