--- a/src/scss/partials/03_organism/_o-form.scss
+++ b/src/scss/partials/03_organism/_o-form.scss
@@ -156,6 +156,18 @@ input{
                 color: $text-medium;
             }
         }
+        .m-formGroup__imgWrap{
+            width: 120px;
+            padding: 0 15px;
+            flex-shrink: 0;
+        }
+        .m-formGroup__img{
+
+        }
+        .m-formGroup__content{
+            display: flex;
+            flex-direction: column;
+        }
         .m-formGroup__label{
             position: relative;
             transform: none;
@@ -167,6 +179,15 @@ input{
             cursor: pointer;
             padding-bottom: 0;
             opacity: 1;
+        }
+        .m-formGroup__text{
+            opacity: 0.7;
+            display: block;
+        }
+        .m-formGroup__content{
+            .m-formGroup__label{
+                padding-left: 0;
+            }
         }
     }
 
@@ -413,3 +434,24 @@ select.m-formGroup__input, select.m-formGroup__input:not(:placeholder-shown){
         white-space: nowrap;
     }
 }
+
+
+@media screen and (max-width: 500px){
+    .m-formGroup{
+
+        &.-cart{
+            flex-direction: column;
+            .m-formGroup__imgWrap{
+                padding: 10px 0 0 0;
+            }
+            .m-formGroup__label{
+                padding-left: 0;
+                padding-top: 10px;
+            }
+            .m-formGroup__text{
+                padding-bottom: 10px;
+            }
+        }
+    }
+}
+
