--- a/src/scss/partials/03_organism/_o-form.scss
+++ b/src/scss/partials/03_organism/_o-form.scss
@@ -167,6 +167,7 @@ input{
         .m-formGroup__content{
             display: flex;
             flex-direction: column;
+            flex-grow: 1;
         }
         .m-formGroup__label{
             position: relative;
