--- a/src/pug/partials/_single-product-cell.pug
+++ b/src/pug/partials/_single-product-cell.pug
@@ -15,6 +15,7 @@
                     .m-productCell__tagSingle 
                         .a-tag.-top Top
                 .a-tag.-circle -50%
+                .a-tag.-delivery Doprava zdarma
                 
                 .m-productCell__imgWrap
                     img.lazy.m-productCell__img(src=URLbase+"img/placeholder-280x280.png" data-src=URLbase+"img/product-thumb-medium.jpg" alt="#")
