--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -124,6 +124,7 @@ html(lang=lang)
                                         span.m-productDetailMain__priceOld 22 999 Kč
                                         h2.m-productDetailMain__priceMain 18 546 Kč
                                         span.m-productDetailMain__priceDPH 16 800 Kč bez DPH
+                                        .m-productDetailMain__priceNote DOPRAVA od 40 Kč (při nákupu nad 2000 Kč zdarma)
 
                                     .m-productDetailMain__qty
                                         .m-numberStepper
