--- a/src/scss/partials/02_molecule/_m-productDetailMain.scss
+++ b/src/scss/partials/02_molecule/_m-productDetailMain.scss
@@ -121,6 +121,11 @@
     @include f-14-dark-regular;
     font-size: 1.3rem;
 }
+.m-productDetailMain__priceNote{
+    margin-top: 10px;
+    color: #AE1313;
+    font-weight: 500;
+}
 .m-productDetailMain__qty{
     padding-right: 2rem;
 }
