--- a/src/pug/produkt-detail.pug
+++ b/src/pug/produkt-detail.pug
@@ -27,8 +27,8 @@ html(lang=lang)
                                     .m-productDetailCarousel__tagSingle 
                                         .a-tag.-top Top
                                 .a-tag.-circle -50%
-
-
+                                .a-tag.-delivery Doprava zdarma
+                
 
                                 .m-productDetailCarousel__gallery(itemscope itemtype="http://schema.org/ImageGallery")
                                     .swiper-container-horizontal.m-productDetailCarousel__content
