--- a/src/pug/partials/_navMain.pug
+++ b/src/pug/partials/_navMain.pug
@@ -89,3 +89,6 @@ header.o-nav
 .a-darkOverlay(id="js-darkOverlay")
 
 .a-navPush
+
+.notice 
+	.container Na základě opatření Vlády ČR jsou od 22.10. naše kamenné pobočky do odvolání uzavřeny. Expedice zásilek funguje bez omezení.
