--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -56,3 +56,11 @@
 /* ========================================================================== */
 
 @import "partials/05_page/**/*";
+
+
+
+.notice{
+    color: white;
+    background: #AE1313;
+    padding: 10px 0;
+}
