--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -64,3 +64,9 @@
     background: #AE1313;
     padding: 10px 0;
 }
+.playment-card{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
